updated profile list, tweak to encounter profile

--- a/pages/profiles.html
+++ b/pages/profiles.html
@@ -15,7 +15,7 @@
 
   <p>The following profiles set the minimum expectations to record, search and fetch health data associated with a Patient:</p>
 
-  {%  include list-simple-profiles.xhtml %}
+  {% include list-ballot-profiles.xhtml %}
 
 <ul><li><a href="us-core-vitalsigns.html">Vital Signs Profile</a> (From FHIR Core Profiles for Observation)</li></ul>
 
